fix friday overflow

--- a/public/main.css
+++ b/public/main.css
@@ -244,7 +244,7 @@ input, button {
 #dayswrap {
     width: 100%;
     
-    white-space: pre;
+    white-space: nowrap;
     overflow:auto;
     
     position: relative;
